--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 		</header>
 
-								<!-- Main Section -->
+								<!-- Main Page -->
 		<section>
 						
 								<!-- Main article -->
